Add Google Analytics tracking code
Added Google Analytics tracking code to index.html.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
   <meta name="description" content="Professional IT services, cloud solutions, cybersecurity, and managed IT support for businesses across the UK.">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  
+  <!-- Google Analytics Tracking Code (Added 2025-04-16) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-1NT86V9593"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-1NT86V9593');
+  </script>
+
   <style>
     :root {
       --primary: #0056b8;
